refactor eror handling for installment_controller and add installment documentation
